--- a/EECIP/Views/Shared/_CommonSideNav.cshtml
+++ b/EECIP/Views/Shared/_CommonSideNav.cshtml
@@ -11,8 +11,9 @@
 
         @*@Html.Action("Index", "Language")*@
         @Html.Action("ListCategorySideMenu", "Forum")
-        @*@Html.Action("SideSearch", "Search")
-            @Html.Action("PopularTags", "Tag", new { amountToTake = 20 })
+        @Html.Action("PopularTags", "Forum")    
+    @*@Html.Action("SideSearch", "Search")
+            
             @Html.Action("CurrentWeekHighPointUsers", "Point")
             @Html.Action("HotTopics", "Topic")*@
     </div>
