--- a/EECIP/Views/Forum/ShowTopic.cshtml
+++ b/EECIP/Views/Forum/ShowTopic.cshtml
@@ -1,39 +1,44 @@
 ﻿@using EECIP.App_Logic.BusinessLogicLayer
 @model EECIP.Models.vmForumTopicView
 @{
-    ViewBag.Title = "  .";
+    ViewBag.Title = "Discussion Topic";
     ViewBag.ShowBack = true;
-    // Set a ViewBag for the category
-    var qs = Request.QueryString["order"] ?? string.Empty;
 }
-
-
-@*@Html.Action("GetTopicBreadcrumb", "Topic", new { topic = Model.Topic })*@
 
 <div class="row">
     <div class="col-md-9">
+
+        <ul class="breadcrumb">
+            <li>
+                <a itemprop="url" href="/forum/"><span>Forum Home</span></a>
+            </li>
+            <li itemprop="child" class="active">
+                <span itemprop="title">@Html.Raw(Model.Topic.Name)</span>
+            </li>
+        </ul>
+
 
         <div class="topicshow">
             <div class="topicheading">
                 <div class="widgetright">
                     @if (Model.IsSubscribed)
                     {
-                    <a href="#" class="emailunsubscription" data-id="@Model.Topic.Id" data-type="topic">
-                        <span class="glyphicon glyphicon-minus" aria-hidden="true"></span>Unsubscribe
-                    </a>
+                        <a href="#" class="emailunsubscription" data-id="@Model.Topic.Id" data-type="topic">
+                            <span class="glyphicon glyphicon-minus" aria-hidden="true"></span>Unsubscribe
+                        </a>
                     }
                     else
                     {
-                    <a href="#" class="emailsubscription" data-id="@Model.Topic.Id" data-type="topic">
-                        <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>Subscribe
-                    </a>
+                        <a href="#" class="emailsubscription" data-id="@Model.Topic.Id" data-type="topic">
+                            <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>Subscribe
+                        </a>
                     }
                 </div>
-                <h1>@Html.Raw(Model.Topic.Name)</h1>
+                <h1 style="margin-top:0px">@Html.Raw(Model.Topic.Name)</h1>
                 <ul class="topicinfo">
                     @if (Model.Topic.IsSticky)
                     {
-                    <li><span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span> Topic Is Sticky</li>
+                        <li><span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span> Topic Is Sticky</li>
                     }
                     @if (Model.Topic.IsLocked)
                     {
@@ -55,23 +60,26 @@
 
                     @if (Model.Topic.Solved)
                     {
-                    <li><span class="glyphicon glyphicon-ok text-success" aria-hidden="true"></span> Topic Is Solved</li>
+                        <li class="text-green text-bold"><span class="glyphicon glyphicon-ok text-green" aria-hidden="true"></span> Topic Is Solved</li>
                     }
 
                 </ul>
 
             </div>
 
-            @if (Model.Poll != null)
-            {
-                // Show the poll if there is one
-                Html.RenderPartial("_Poll", Model.Poll);
-            }
-
             <div class="topicstarterpost">
-                @{
+                @if (Model.StarterPost != null)
+                {
                     Html.RenderPartial("_Post", Model.StarterPost);
                 }
+
+                <div class="posttags tagsinput">
+                    @foreach (var tag in Model.TopicTags)
+                    {
+                        <span class="tag"><span><a href="@Url.Action("Index", "Forum", new { tag = tag })">@Html.Raw(tag)</a></span></span>
+                    }
+                </div>
+
                 <div class="row topicstarterpostbeginpostsheading">
                     <div class="col-md-8 hidden-xs topicstarterpostcomments">
                         @(Model.Posts != null ? Model.Posts.Count() : 0) Comments
@@ -80,9 +88,9 @@
                         @if (Model.Posts != null && Model.Posts.Count() > 1)
                         {
                             <text> Order By:
-                                <a href="@Url.Action("ShowTopic", "Forum", new { slug = 'd', order="" })">Standard</a> |
-                                <a href="@Url.Action("ShowTopic", "Forum", new { slug = 'd', order="newest" })">Newest</a> |
-                                <a href="@Url.Action("ShowTopic", "Forum", new { slug = 'd', order="votes" })">Votes</a>
+                                <a href="@Url.Action("ShowTopic", "Forum", new { slug = Model.Topic.Slug, order="" })">Standard</a> |
+                                <a href="@Url.Action("ShowTopic", "Forum", new { slug = Model.Topic.Slug, order="newest" })">Newest First</a> |
+                                <a href="@Url.Action("ShowTopic", "Forum", new { slug = Model.Topic.Slug, order="votes" })">Votes</a>
                             </text>
                         }
                     </div>
@@ -94,63 +102,138 @@
                 Html.RenderPartial("_Post", post);
             }
 
-            @*@if (Model.TotalPages > 1)
-            {
-                <a href="#" class="showmoreposts btn-mvc btn-mvc-large btn-mvc-fullwidth">
-                    <span class="smpactive">Show More Posts</span>
-                    <span class="smploading" style="display: none;">@Html.LanguageString("Topic.ShowMorePostsLoading")</span>
-                </a>
-            }*@
-
             @if (!Model.Topic.IsLocked)
             {
                 <span id="newpostmarker"></span>
-
-                if (!Model.DisablePosting)
-                {
-                    <div id="createpostholder">
-                        @using (Ajax.BeginForm("CreatePost", "Forum", null, new AjaxOptions
-                        {
-                            HttpMethod = "POST",
-                            LoadingElementId = "createpostwait",
-                            OnSuccess = "AjaxPostSuccess()",
-                            OnFailure = "AjaxPostError('Error creating post')",
-                            UpdateTargetId = "newpostmarker",
-                            OnBegin = "AjaxPostBegin()"
-                        }, new { @id = "postcodeform" }))
-                        {
-                            <div class="editorholder">
-                                @Html.EditorFor(x => x.NewPostContent)
-                                @*@Html.EditorFor(x => x.NewPostContent, new { @class = "createpost required form-control rte" })*@
-                                @Html.ValidationMessageFor(x => x.NewPostContent)
-                            </div>
-                            <input type="submit" id="createpostbutton" class="btn-mvc-green btn-mvc-large" value="Add Post" />
-                            <span style="display: none;" id="createpostwait" class="ajaxspinner" title="Please Wait">Please Wait</span>
-                            @Html.HiddenFor(x => x.Topic.Id)
-                            @Html.HiddenFor(x => x.Topic.Slug)
-                        }
-
-                    </div>
-
-                }
-
-
-
-                <a id="createpost"></a>
+                <div id="createpostholder">
+                    @using (Ajax.BeginForm("CreatePost", "Forum", null, new AjaxOptions
+                    {
+                        HttpMethod = "POST",
+                        LoadingElementId = "createpostwait",
+                        OnSuccess = "AjaxPostSuccess()",
+                        OnFailure = "AjaxPostError('Error creating post')",
+                        UpdateTargetId = "newpostmarker",
+                        OnBegin = "AjaxPostBegin()"
+                    }, new { @id = "postcodeform" }))
+                    {
+                        <div class="editorholder">
+                            @Html.EditorFor(x => x.NewPostContent)
+                            @*@Html.EditorFor(x => x.NewPostContent, new { @class = "createpost required form-control rte" })*@
+                            @Html.ValidationMessageFor(x => x.NewPostContent)
+                        </div>
+                        <input type="submit" id="createpostbutton" class="btn btn-success btn-lg " value="Add Post" style="margin-top:10px;" />
+                        <span style="display: none;" id="createpostwait" class="ajaxspinner" title="Please Wait">Please Wait</span>
+                        @Html.HiddenFor(x => x.Topic.Id)
+                        @Html.HiddenFor(x => x.Topic.Slug)
+                    }
+                </div>
             }
             else
             {
                 <p class="topiclockedmessage">Topic Is Locked</p>
             }
 
-
-            <input type="hidden" id="pageIndex" value="@(Model.PageIndex + 1)" />
-            <input type="hidden" id="topicId" value="@Model.Topic.Id" />
-            <input type="hidden" id="totalPages" value="@Model.TotalPages" />
-
         </div>
-
     </div>
 
     @Html.Partial("_CommonSideNav")
 </div>
+
+
+@section Scripts {
+<script type="text/javascript">
+        $(document).ready(function () {
+
+            //upvoting event handling
+            $(".votelink").on('click', function (e) {
+                e.preventDefault();
+                //determine if upvoting or removing
+                var _typ = $(this).attr('data-type');
+                var _id = $(this).attr('data-id');
+                var linker = $(this);
+
+                $.post('@Url.Action("PostVote", "Forum")',
+                AddAntiForgeryToken({ id: _id, typ: _typ }))
+
+                    .done(function (response) {
+                        if (response.msg == "Success") {
+                            linker.parent().children('span').eq(1).text(response.val);
+                            if (_typ == "up") {
+                                toastr.success("Thank you for voting!");
+                                linker.text('Liked');
+                                linker.attr('data-type', 'removeup');
+                            }
+                            else if (_typ == "removeup") {
+                                toastr.success("Vote removed");
+                                linker.text('Like');
+                                linker.attr('data-type', 'up');
+                            }
+                            else if (_typ == "down") {
+                                toastr.success("Thank you for voting!");
+                                linker.text('Disliked');
+                                linker.attr('data-type', 'removedown');
+                            }
+                            else if (_typ == "removedown") {
+                                toastr.success("Vote removed");
+                                linker.text('Dislike');
+                                linker.attr('data-type', 'down');
+                            }
+                        }
+                        else {
+                            toastr.warning(response.msg);
+                        }
+                    }).fail(function (data) {
+                        toastr.warning("Unable to record vote.");
+                    });
+
+            });
+
+
+            
+            //answer event handling
+            $(".solutionlink").on('click', function (e) {
+                e.preventDefault();
+                //determine if answering or removing answer
+                var _typ = $(this).attr('data-type');
+                var _id = $(this).attr('data-id');
+                var linker = $(this);
+
+                $.post('@Url.Action("PostAnswer", "Forum")',
+                AddAntiForgeryToken({ id: _id, typ: _typ }))
+
+                    .done(function (response) {
+                        if (response.msg == "Success") {
+                            if (_typ == "answer") {
+                                toastr.success("Thank you for voting!");
+                                linker.text('Solution');
+                                linker.attr('data-type', 'removeanswer');
+                                linker.addClass("solution");
+                                linker.prev().removeClass('glyphicon-question-sign');
+                                linker.prev().addClass('glyphicon-ok text-green');
+                            }
+                            else if (_typ == "removeanswer") {
+                                toastr.success("Vote removed");
+                                linker.text('Mark As Solution');
+                                linker.attr('data-type', 'answer');
+                                linker.removeClass("solution");
+                                linker.prev().addClass('glyphicon-question-sign');
+                                linker.prev().removeClass('glyphicon-ok text-green');
+                            }
+                        }
+                        else {
+                            toastr.warning(response.msg);
+                        }
+                    }).fail(function (data) {
+                        toastr.warning("Unable to record vote.");
+                    });
+
+            });
+
+        });
+
+    AddAntiForgeryToken = function (data) {
+        data.__RequestVerificationToken = $('input[name=__RequestVerificationToken]').val();
+        return data;
+    };
+</script>
+}
