--- a/EECIP/Views/Forum/_Topic.cshtml
+++ b/EECIP/Views/Forum/_Topic.cshtml
@@ -21,10 +21,10 @@
                 {
                     <span class="glyphicon glyphicon-lock" aria-hidden="true"></span>
                 }
-                @if (Model._topic.Poll != null)
+                @*@if (Model._topic.Poll != null)
                 {
                     <span class="glyphicon glyphicon-align-left" aria-hidden="true"></span>
-                }
+                }*@
                 @Html.Raw(Model._topic.Name)
             </a>
         </h3>
@@ -40,14 +40,14 @@
         }*@
 
         @if (Model._topic != null)
-    {
+        {
         <div class="tagsinput clearfix">
             @foreach (var tag in Model.topicTags)
-        {
+            {
             <span class="tag"><span><a href="@Url.Action("Index", "Forum", new { tag = tag.TopicTag })">@Html.Raw(tag.TopicTag)</a></span></span>
-    }
+            }
         </div>
-}
+        }
 
         <p class="topicrowfooterinfo">
             @*<a href="@Html.Raw(Model.LastPostPermaLink)">
@@ -62,9 +62,9 @@
             <span class="stats topicupvotes"><span class="glyphicon glyphicon-thumbs-up" aria-hidden="true"></span> @Model.upVoteCount</span>
             <span class="stats topicdownvotes"><span class="glyphicon glyphicon-thumbs-down" aria-hidden="true"></span> @Model.upVoteCount</span>
             @if (Model._topic.Solved)
-        {
-            <span class="stats topicsolved"><span class="glyphicon glyphicon-ok green-colour" aria-hidden="true"></span></span>
-    }
+            {
+                <span class="stats topicsolved text-green text-bold"><span class="glyphicon glyphicon-ok text-green" aria-hidden="true"></span> Solved</span>
+            }
         </p>
 
     </div>
